Update on previous issues, some off alignment and design laps.

--- a/css/commons.css
+++ b/css/commons.css
@@ -333,7 +333,7 @@
 	}
 
 	.section-subheader{
-		
+		font-size: 24px;
 	}
 
 	.section-text{
