--- a/css/custom-ad.css
+++ b/css/custom-ad.css
@@ -3,7 +3,7 @@
 /* Custom, iPhone Retina */ 
 @media only screen and (min-width : 320px) {
 	#first-section{
-		height: 588px;
+		/*height: 588px;*/
 	}
 
 	#first-section #section-quote-container .head-quote{
@@ -45,7 +45,8 @@
 	}
 
 	#fourth-section, #eight-section{
-		background: url(../images/banner.png) no-repeat;
+		background: url(../images/banner.png) no-repeat center;
+		padding-bottom: 15px;
 	}
 
 	#fourth-section, #eight-section{
@@ -54,9 +55,11 @@
 
 	#fourth-section h1, #eight-section h1{
 		text-align: center;
+		font-size: 23px;
 	}
 
 	#fourth-section button, #eight-section button{
+		font-size: 11px;
 		display: block;
 		margin-right: auto;
 		margin-left: auto;
@@ -147,7 +150,7 @@
 /*@media only screen and (min-width : 480px) {*/
 @media only screen and (min-width : 509px) and (max-width: 767px) {
 	#first-section{
-		height: 592px;
+		/*height: 592px;*/
 	}
 
 	#second-section{
@@ -216,7 +219,7 @@
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) and (max-width: 991px){
 	#first-section{
-		height: 595px;
+		/*height: 595px;*/
 	}
 
 	#first-section #section-quote-container h1{
@@ -250,7 +253,7 @@
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) and (max-width: 1199px){
 	#first-section{
-		height: 472px;
+		/*height: 472px;*/
 	}
 
 	#first-section #section-quote-container .head-quote{
@@ -357,8 +360,13 @@
 	}
 
 	#eight-section, #fourth-section{
-		height: 180px;
+		/*height: 180px;*/
 		background: url(../images/section4-bg.png) no-repeat;
+		padding-bottom: 20px;
+	}
+
+	#fourth-section  button, #eight-section button{
+		font-size: 18.55px;
 	}
 
 	#footer-section{
@@ -412,7 +420,15 @@
 
 	#fourth-section, #eight-section{
 		background: url(../images/customad/section4-bg.png) no-repeat;
-		/*height: 120px;*/
+		padding-bottom: 20px;
+	}
+
+	#fourth-section  h1, #eight-section h1{
+		font-size: 29.54px;
+	}
+
+	#fourth-section  button, #eight-section button{
+		font-size: 18.55px;
 	}
 
 	#fifth-section {
@@ -579,8 +595,16 @@ html, body {
 	background-size: cover;
 	padding-top: 40px;
 	padding-bottom: 40px;
+/*	display: flex;
+	 flex-direction: row;*/
 }
 
+/*#seventh-section [class^="col-"], #seventh-section > [class*=" col-"]{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+*/
 .arrow-left{
 	float: right
 }
@@ -593,7 +617,18 @@ html, body {
 
 #fourth-section, #eight-section {
 	background-color: #181818;
-	background-size: cover;
+	/*background-size: cover;*/
 	padding-top: 5px;
-	padding-bottom: 20px;
+	/*padding-bottom: 20px;*/
+}
+
+#fourth-section  h1, #eight-section h1{
+	font-family: MuseoSans700;
+	/*font-size: 29.54px;*/
+	padding-bottom: 5px;
+}
+
+#fourth-section  button, #eight-section button{
+	font-family: AvenirLTStd-Heavy;
+	/*font-size: 18.55px;*/
 }
